deploy/resources/generation/resources/generation/resources/generation/resources/generation/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-data-agent-services/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataAgentContent
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-agent-content
    sas.com/admin: namespace
  name: sas-data-agent-content
spec:
  host: $(INGRESS_HOST)
  path: /dataAgentContent
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-agent-content
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataAgentContent
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-agent-content
    sas.com/admin: namespace
  name: sas-data-agent-content-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /dataAgentContent
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-agent-content
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataAgentManagement
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-agent-management
    sas.com/admin: namespace
  name: sas-data-agent-management
spec:
  host: $(INGRESS_HOST)
  path: /dataAgentManagement
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-agent-management
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataAgentManagement
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-agent-management
    sas.com/admin: namespace
  name: sas-data-agent-management-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /dataAgentManagement
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-agent-management
  wildcardPolicy: Subdomain
